--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
         # Set health checks to wait until postgres has started
+        ports:
+          - 8000:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
