--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,61 +1,49 @@
-# This is a basic workflow to help you get started with Actions
+name: ci tests
 
-name: ci-test
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+
   test:
     name: Test
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Service containers to run with `container-job`
+
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image
-        image: postgres:12
-        # Provide the password for postgres
+        image: postgres:14-alpine
         env:
-          POSTGRES_DB: simple_bank
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
-        # Set health checks to wait until postgres has started
+          POSTGRES_DB: simple_bank
         ports:
-          - 8000:5432
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
 
-      - name: Install golang-migrate
-        run: 
-          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/bin/
-          which migrate
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.18
+      id: go
 
-      - name: Run migrations
-        run: make migrateup
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Test
-        run: make test
+    - name: Install golang-migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.14.1/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        which migrate
+    - name: Run migrations
+      run: make migrateup
 
-      
+    - name: Test
+      run: make test
