--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,13 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14-alpine
+        image: postgres:12
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
           POSTGRES_DB: simple_bank
         ports:
-          - 5432:5432
+          - 8000:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
