--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: simple-bank-api
         image: 778516318149.dkr.ecr.us-east-1.amazonaws.com/simplebank:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
