--- a/.github/workflows/deplauy.yml
+++ b/.github/workflows/deplauy.yml
@@ -44,7 +44,7 @@ jobs:
         docker push -a $REGISTRY/$REPOSITORY
 
     - name: Update kube Config
-      run: aws eks update-kubeconfig --name simple-bamk --region us-west-1
+      run: aws eks update-kubeconfig --name simple-bank --region us-west-1
 
     - name: Deploy image to Amazon EKS
       run: |
